Add: Build instruction